# GeoJSON

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc.json  AGENTS.md  BE Coding Assignment.md  Dockerfile  Makefile  README.md  biome.json  codestyle.txt  conftest.py  docker-compose.yml  manage.py  package.json  pyproject.toml
accounts/: __init__.py  apps.py  manager.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  __init__.py
accounts/tests/: __init__.py  conftest.py  test_auth.py  test_serializers.py  test_user_model.py
config/: __init__.py  asgi.py  middleware.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  dev.py  prod.py  test.py
config/tests/: __init__.py  test_security_middleware.py  test_settings_split.py  test_urlconf.py
e2e/: add-new-property.mjs  capture-frontend-check.mjs  edit-page-editable.mjs  edit-page-search.mjs  map-color-style.mjs  search-bar-ux.mjs
e2e/fixtures/: france-sample.geojson
features/: __init__.py  apps.py  filters.py  models.py  pagination.py  serializers.py  urls.py  views.py
features/management/: __init__.py
features/migrations/: 0001_initial.py  0002_allow_null_created_by.py  __init__.py
features/tests/: __init__.py  conftest.py  test_bbox_filter.py  test_categories.py  test_filters.py  test_geojson_roundtrip.py  test_models.py  test_pagination.py  test_search.py  test_serializers.py  test_views.py
frontend/: __init__.py  apps.py  urls.py  views.py
frontend/templates/: base.html  edit.html  home.html  login.html  map.html  register.html
frontend/tests/: __init__.py  test_map_import.py  test_static.py  test_templates.py  test_views.py
(+63 files in other folders)
