[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geojson-api"
version = "0.1.0"
description = "Django + PostGIS GeoJSON API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "Django>=5.1,<5.2",
    "djangorestframework>=3.15,<3.16",
    "djangorestframework-gis>=1.0,<1.1",
    "djangorestframework-simplejwt>=5.3,<5.4",
    "django-cors-headers>=4.3,<4.4",
    "dj-database-url>=2.2,<3.0",
    "psycopg[binary]>=3.1,<3.2",
    "gunicorn>=22.0,<23.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-django>=4.8,<5.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.15,<0.16",
    "pre-commit>=4.0,<5.0",
]

[tool.setuptools.packages.find]
include = ["accounts*", "config*", "features*", "frontend*"]
exclude = ["tests*", "*.tests*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
testpaths = ["accounts", "config", "features", "frontend"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade (str | None, f-strings, etc.)
    "B",    # flake8-bugbear (mutable defaults, etc.)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PERF", # perflint (sets for membership, etc.)
    "D",    # pydocstyle
]
